--- a/style.css
+++ b/style.css
@@ -1,3 +1,14 @@
+:root {
+    --primary-color: hsl(257, 40%, 49%);
+    --secondary-color: hsl(300, 69%, 71%);
+    --secondary-color--dark: hsl(300, 100%, 50%);
+    --text: #FFFFFF;
+    --shadow-sm : 0 5px 1rem rgba(0 0 0 /.35);
+    --shadow-lg : 0 5px 2rem rgba(0 0 0 /.25);
+    --heading-font: "Poppins";
+    --opacity : .75;
+}
+
 *, *::before, *::after {
     padding: 0;
     margin: 0;
@@ -5,3 +16,135 @@
     font-family: "Open Sans";
 }
 
+body {
+    background-color: var(--primary-color);
+    color: var(--text);
+    height: auto;
+    min-height: 100vh;
+}
+
+header {
+    background-image: url(./images/bg-mobile.svg), linear-gradient(var(--primary-color), var(--primary-color));
+    background-size: cover;
+    padding: 2rem ;
+}
+
+.logo {
+    height: 2rem;
+}
+
+.hero {
+    display: block;
+    width: 100%;
+    height: 20rem;
+    object-fit: contain;
+}
+
+.container {
+    padding: 0rem 3rem 3rem 3rem;
+}
+
+section.content {
+    padding: 0 1.75rem;
+    display: flex;
+    flex-direction: column;
+    row-gap: 1.5rem;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+}
+
+.content__heading {
+    font-family: var(--heading-font);
+    text-transform: capitalize;
+    font-size: 1.5rem;
+    font-weight: 600;
+}
+
+.content__text {
+    opacity: var(--opacity);
+    font-size: 1rem;
+}
+
+.content__btn,
+.content__btn:visited {
+    text-transform: capitalize;
+    text-decoration: none;
+    background-color: var(--text);
+    display: block;
+    color: var(--primary-color);
+    font-weight: 600;
+    border-radius: 2rem;
+    width: fit-content;
+    box-shadow: var(--shadow-sm);
+    transition: all .25s ease;
+}
+
+.content__btn > span {
+    display: block;
+    padding: .6rem 4rem;
+    font-size: .7rem;
+    font-family: var(--heading-font);
+    opacity: var(--opacity);
+    transition: all .25s ease;
+}
+
+.content__btn:hover,
+.content__btn:focus {
+    background-color: var(--secondary-color);
+    transform: translateY(-1px) scale(1.05);
+    box-shadow: var(--shadow-lg);
+    outline: none;
+    border: none;
+}
+.content__btn:hover > span,
+.content__btn:focus > span {
+    opacity: 1;
+    color: var(--text);
+}
+
+/* attribution -sr-only */
+footer {
+    margin: 3rem 0;
+}
+.attribution {
+    opacity: 0;
+    position: absolute;
+    pointer-events: none;
+    z-index: -20;
+}
+
+
+ul.icon__list {
+    display: flex;
+    gap: .75rem;
+    align-items: center;
+    justify-content: center;
+    list-style: none;
+}
+
+.icon {
+    height: 2rem;
+    width: 2rem;
+    display: grid;
+    place-items: center;
+    border: 1.6px solid var(--text);
+    border-radius: 50%;
+    aspect-ratio: 1 / 1;
+    transition: all .25s linear;
+    cursor: pointer;
+}
+
+.icon > svg {
+    height: 1rem;
+    width: 1rem;
+    fill: var(--text);
+    transition: all .25s linear;
+}
+
+.icon:hover {
+    border-color: var(--secondary-color--dark);
+}
+.icon:hover svg {
+    fill: var(--secondary-color--dark);
+}
