--- a/style.css
+++ b/style.css
@@ -19,36 +19,39 @@
 body {
     background-color: var(--primary-color);
     color: var(--text);
-    height: auto;
-    min-height: 100vh;
+    height: 100%;
 }
 
 header {
     background-image: url(./images/bg-mobile.svg), linear-gradient(var(--primary-color), var(--primary-color));
     background-size: cover;
-    padding: 2rem ;
+}
+
+.page-container {
+    height: 100%;
+    padding: 1rem 2rem;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
 }
 
 .logo {
-    height: 2rem;
+    height: 1.5rem;
 }
 
 .hero {
     display: block;
     width: 100%;
-    height: 20rem;
+    max-height: 18rem;
     object-fit: contain;
-}
-
-.container {
-    padding: 0rem 3rem 3rem 3rem;
+    margin: 2rem 0;
 }
 
 section.content {
-    padding: 0 1.75rem;
+    padding: 0 2.75rem;
     display: flex;
     flex-direction: column;
-    row-gap: 1.5rem;
+    gap: 1rem;
     text-align: center;
     align-items: center;
     justify-content: center;
@@ -68,6 +71,7 @@ section.content {
 
 .content__btn,
 .content__btn:visited {
+    margin-top: .5rem;
     text-transform: capitalize;
     text-decoration: none;
     background-color: var(--text);
@@ -105,7 +109,8 @@ section.content {
 
 /* attribution -sr-only */
 footer {
-    margin: 3rem 0;
+    margin-top: 3rem;
+    width: 100%;
 }
 .attribution {
     opacity: 0;
@@ -116,6 +121,7 @@ footer {
 
 
 ul.icon__list {
+    width: 100%;
     display: flex;
     gap: .75rem;
     align-items: center;
@@ -124,11 +130,11 @@ ul.icon__list {
 }
 
 .icon {
-    height: 2rem;
-    width: 2rem;
+    height: 1.75rem;
+    width: 1.75rem;
     display: grid;
     place-items: center;
-    border: 1.6px solid var(--text);
+    border: 1px solid var(--text);
     border-radius: 50%;
     aspect-ratio: 1 / 1;
     transition: all .25s linear;
@@ -136,8 +142,8 @@ ul.icon__list {
 }
 
 .icon > svg {
-    height: 1rem;
-    width: 1rem;
+    height: .75rem;
+    width: .75rem;
     fill: var(--text);
     transition: all .25s linear;
 }
