--- a/style.css
+++ b/style.css
@@ -1,156 +1,253 @@
 :root {
-    --primary-color: hsl(257, 40%, 49%);
-    --secondary-color: hsl(300, 69%, 71%);
-    --secondary-color--dark: hsl(300, 100%, 50%);
-    --text: #FFFFFF;
-    --shadow-sm : 0 5px 1rem rgba(0 0 0 /.35);
-    --shadow-lg : 0 5px 2rem rgba(0 0 0 /.25);
-    --heading-font: "Poppins";
-    --opacity : .75;
+  --primary-color: hsl(257, 40%, 49%);
+  --secondary-color: hsl(300, 69%, 71%);
+  --secondary-color--dark: hsl(300, 100%, 50%);
+  --text: #ffffff;
+  --shadow-sm: 0 5px 1rem rgba(0 0 0 /0.35);
+  --shadow-lg: 0 5px 2rem rgba(0 0 0 /0.25);
+  --heading-font: "Poppins";
+  --opacity: 0.75;
 }
 
-*, *::before, *::after {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    font-family: "Open Sans";
+*,
+*::before,
+*::after {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: "Open Sans";
 }
 
 body {
-    background-color: var(--primary-color);
-    color: var(--text);
-    height: 100%;
+  background-color: var(--primary-color);
+  color: var(--text);
+  height: 100%;
 }
 
 header {
-    background-image: url(./images/bg-mobile.svg), linear-gradient(var(--primary-color), var(--primary-color));
-    background-size: cover;
+  background-image: url(./images/bg-mobile.svg),
+    linear-gradient(var(--primary-color), var(--primary-color));
+  background-size: cover;
 }
 
 .page-container {
-    height: 100%;
-    padding: 1rem 2rem;
-    display: flex;
-    flex-direction: column;
-    align-items: start;
+  height: 100%;
+  padding: 1rem 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
 }
 
 .logo {
-    height: 1.5rem;
+  height: 1.5rem;
 }
 
 .hero {
-    display: block;
-    width: 100%;
-    max-height: 18rem;
-    object-fit: contain;
-    margin: 2rem 0;
+  display: block;
+  width: 100%;
+  max-height: 18rem;
+  object-fit: contain;
+  margin: 2rem 0;
 }
 
 section.content {
-    padding: 0 2.75rem;
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    text-align: center;
-    align-items: center;
-    justify-content: center;
+  padding: 0 2.75rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
 }
 
 .content__heading {
-    font-family: var(--heading-font);
-    text-transform: capitalize;
-    font-size: 1.5rem;
-    font-weight: 600;
+  font-family: var(--heading-font);
+  text-transform: capitalize;
+  font-size: 1.5rem;
+  font-weight: 600;
 }
 
 .content__text {
-    opacity: var(--opacity);
-    font-size: 1rem;
+  opacity: var(--opacity);
+  font-size: 1rem;
 }
 
 .content__btn,
 .content__btn:visited {
-    margin-top: .5rem;
-    text-transform: capitalize;
-    text-decoration: none;
-    background-color: var(--text);
-    display: block;
-    color: var(--primary-color);
-    font-weight: 600;
-    border-radius: 2rem;
-    width: fit-content;
-    box-shadow: var(--shadow-sm);
-    transition: all .25s ease;
+  margin-top: 0.5rem;
+  text-transform: capitalize;
+  text-decoration: none;
+  background-color: var(--text);
+  display: block;
+  color: var(--primary-color);
+  font-weight: 600;
+  border-radius: 2rem;
+  width: fit-content;
+  box-shadow: var(--shadow-sm);
+  transition: all 0.25s ease;
 }
 
 .content__btn > span {
-    display: block;
-    padding: .6rem 4rem;
-    font-size: .7rem;
-    font-family: var(--heading-font);
-    opacity: var(--opacity);
-    transition: all .25s ease;
+  display: block;
+  padding: 0.6rem 4rem;
+  font-size: 0.7rem;
+  font-family: var(--heading-font);
+  opacity: var(--opacity);
+  transition: all 0.25s ease;
 }
 
 .content__btn:hover,
 .content__btn:focus {
-    background-color: var(--secondary-color);
-    transform: translateY(-1px) scale(1.05);
-    box-shadow: var(--shadow-lg);
-    outline: none;
-    border: none;
+  background-color: var(--secondary-color);
+  transform: translateY(-1px) scale(1.05);
+  box-shadow: var(--shadow-lg);
+  outline: none;
+  border: none;
 }
 .content__btn:hover > span,
 .content__btn:focus > span {
-    opacity: 1;
-    color: var(--text);
+  opacity: 1;
+  color: var(--text);
 }
 
 /* attribution -sr-only */
 footer {
-    margin-top: 3rem;
-    width: 100%;
+  margin-top: 3rem;
+  width: 100%;
 }
 .attribution {
-    opacity: 0;
-    position: absolute;
-    pointer-events: none;
-    z-index: -20;
+  opacity: 0;
+  position: absolute;
+  pointer-events: none;
+  z-index: -20;
 }
 
-
 ul.icon__list {
-    width: 100%;
-    display: flex;
-    gap: .75rem;
-    align-items: center;
-    justify-content: center;
-    list-style: none;
+  width: 100%;
+  display: flex;
+  gap: 0.75rem;
+  align-items: center;
+  justify-content: center;
+  list-style: none;
 }
 
 .icon {
-    height: 1.75rem;
-    width: 1.75rem;
-    display: grid;
-    place-items: center;
-    border: 1px solid var(--text);
-    border-radius: 50%;
-    aspect-ratio: 1 / 1;
-    transition: all .25s linear;
-    cursor: pointer;
+  height: 1.75rem;
+  width: 1.75rem;
+  display: grid;
+  place-items: center;
+  border: 1px solid var(--text);
+  border-radius: 50%;
+  aspect-ratio: 1 / 1;
+  transition: all 0.25s linear;
+  cursor: pointer;
 }
 
 .icon > svg {
-    height: .75rem;
-    width: .75rem;
-    fill: var(--text);
-    transition: all .25s linear;
+  height: 0.75rem;
+  width: 0.75rem;
+  fill: var(--text);
+  transition: all 0.25s linear;
 }
 
 .icon:hover {
-    border-color: var(--secondary-color--dark);
+  border-color: var(--secondary-color--dark);
 }
 .icon:hover svg {
-    fill: var(--secondary-color--dark);
+  fill: var(--secondary-color--dark);
+}
+
+/* media query for bigger phone, mini tablets and tablets */
+@media screen and (min-width: 640px) {
+  .hero {
+    max-height: none;
+  }
+  section.content {
+    max-width: 30rem;
+    margin-right: auto;
+    padding: 1rem;
+    text-align: left;
+    align-items: flex-start;
+  }
+
+  .content__heading {
+    font-size: 2.25rem;
+    line-height: 3rem;
+  }
+
+  .content__text {
+    font-size: 1.125rem;
+  }
+
+  .content__btn,
+  .content__btn:visited {
+    margin-top: 2.5rem;
+  }
+
+  .content__btn > span {
+    font-size: 1rem;
+  }
+
+  footer {
+    margin-top: 5rem;
+    margin-bottom: 1rem;
+  }
+}
+
+/* media query for laptops and onward */
+@media screen and (min-width: 1024px) {
+  body {
+    background-image: url(./images/bg-desktop.svg),
+      linear-gradient(var(--primary-color), var(--primary-color));
+    background-size: contain;
+    background-repeat: no-repeat;
+  }
+
+  .page-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 4rem calc(95vh - 8rem) 4rem;
+    column-gap: 2rem;
+    max-width: 1440px;
+    margin: auto;
+  }
+  .logo {
+    grid-column: 1 / -1;
+  }
+
+  header {
+    background-image: none;
+    grid-column: 1 / 2;
+    grid-row: 2/ 3;
+  }
+  .content__heading {
+    font-size: 2.5rem;
+    line-height: 3rem;
+  }
+
+  .content__text {
+    font-size: 1rem;
+  }
+  .content__btn > span {
+    font-size: 0.8rem;
+  }
+  section.content {
+    max-width: 50rem;
+    grid-column: 2/ -1;
+    grid-row: 2/ 3;
+    justify-content: center;
+    height: 100%;
+  }
+
+  footer {
+    height: 100%;
+    margin: 0;
+    grid-column: 2/ -1;
+    grid-row: 3/ -1;
+  }
+  ul.icon__list {
+    height: 100%;
+    justify-content: flex-end;
+    align-items: end;
+  }
 }
